--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="fireworksCanvas"></canvas>
     <canvas id="textCanvas" style="display: none;"></canvas>
     <audio id="backgroundMusic" src="sound/Amen - La Chata  Letra.mp3" loop></audio>
-    <button id="startButton">Comenzar</button>
+    <button id="startButton">Clickeameee :3</button>
     <script src="script.js"></script>
 </body>
 </html>
