--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="fireworksCanvas"></canvas>
     <canvas id="textCanvas" style="display: none;"></canvas>
-    <audio id="backgroundMusic" src="sound/Nuestra Aflicción.mp3" loop></audio>
+    <audio id="backgroundMusic" src="sound/Amen - La Chata  Letra.mp3" loop></audio>
     <button id="startButton">Clickeameee :3</button>
     <script src="script.js"></script>
 </body>
